--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -72,8 +72,7 @@ layout: default
                         <div class="media-body space-md">
                             <h4>Phone:</h4>
                             <ul>
-                                <li>+8123 456 788 99,</li>
-                                <li>+8123 (456) 788 99</li>
+                                <li>{{ site.phone }}</li>
                             </ul>
                         </div>
                     </div>
@@ -84,8 +83,7 @@ layout: default
                         <div class="media-body space-md">
                             <h4>E-mail:</h4>
                             <ul>
-                                <li>info@roofing.com</li>
-                                <li>info@roofing.com</li>
+                                <li>{{ site.email }}</li>
                             </ul>
                         </div>
                     </div>
@@ -96,8 +94,8 @@ layout: default
                         <div class="media-body space-md">
                             <h4>Location:</h4>
                             <ul>
-                                <li>51 Street, Newyork City, NYPD</li>
-                                <li>18 Street, Newyork City, NYPD</li>
+                                <li>3596 South 300 West Suite 10 <br />
+                                    Salt Lake City, UT 84115</li>
                             </ul>
                         </div>
                     </div>
