--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -100,6 +100,21 @@ layout: default
                         </div>
                     </div>
                 </div>
+                <div class="widget widget-service">
+                    <div class="heading-layout3 mg-b-0">
+                        <h3 class="mg-b-8">Our Services</h3>
+                    </div>
+                    <div class="service-list">
+                        <ul>
+                            <li>
+                                <a href="{{ site.url }}/services/concrete-staining-utah"><i class="fas fa-long-arrow-alt-right"></i>Concrete Staining</a>
+                            </li>
+                            <li>
+                                <a href="{{ site.url }}/services/decorative-concrete-utah"><i class="fas fa-long-arrow-alt-right"></i>Decorative Concrete</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
