added schema for contact page

--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -2,15 +2,15 @@
 layout: default
 ---
  <!-- Inne Page Banner Area Start Here -->
-  <section class="inner-page-banner bg-common" data-bg-image="img/figure/breadcumb.jpg">
+  <section class="inner-page-banner bg-common" data-bg-image="img/h1.png">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>Contact With Us</h1>
+                    <h1>Contact Elite Concrete Utah</h1>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ site.url }}">Home</a>
                         </li>
                         <li>Contacts</li>
                     </ul>
@@ -98,21 +98,6 @@ layout: default
                                     Salt Lake City, UT 84115</li>
                             </ul>
                         </div>
-                    </div>
-                </div>
-                <div class="widget widget-service">
-                    <div class="heading-layout3 mg-b-0">
-                        <h3 class="mg-b-8">Our Services</h3>
-                    </div>
-                    <div class="service-list">
-                        <ul>
-                            <li>
-                                <a href="{{ site.url }}/services/concrete-staining-utah"><i class="fas fa-long-arrow-alt-right"></i>Concrete Staining</a>
-                            </li>
-                            <li>
-                                <a href="{{ site.url }}/services/decorative-concrete-utah"><i class="fas fa-long-arrow-alt-right"></i>Decorative Concrete</a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
