updated projects page

--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -12,7 +12,7 @@ layout: default
                         <li>
                             <a href="{{ site.url }}">Home</a>
                         </li>
-                        <li>Contacts</li>
+                        <li>Contact Us</li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +28,7 @@ layout: default
                 <div class="contact-box-layout2">
                     <div class="contact-form">
                         <div class="heading-layout3">
-                            <h3 class="mg-b-10">Leave a Reply</h3>
+                            <h3 class="mg-b-10">Request A Free Estimate</h3>
                             <p>when an unknown printer took a galley of  type and scrambled it to make.</p>
                         </div>
                         <form class="contact-form-box" id="contact-form">
