--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
  <!-- Inne Page Banner Area Start Here -->
- <section class="inner-page-banner bg-common" data-bg-image="img/figure/breadcumb.jpg">
+ <section class="inner-page-banner bg-common" data-bg-image="img/h1.png">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>All Projects</h1>
+                    <h1>Recent Concrete And Epoxy Projects</h1>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ site.url }}">Home</a>
                         </li>
                         <li>Projects</li>
                     </ul>
