added portfolio images

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -31,42 +31,63 @@ layout: default
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project22.jpg" alt="Project Thumb">
+                        <img src="img/project/1.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project23.jpg" alt="Project Thumb">
+                        <img src="img/project/2.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project24.jpg" alt="Project Thumb">
+                        <img src="img/project/3.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project25.jpg" alt="Project Thumb">
+                        <img src="img/project/4.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project26.jpg" alt="Project Thumb">
+                        <img src="img/project/5.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="project-box-layout5">
                     <div class="item-img">
-                        <img src="img/project/project27.jpg" alt="Project Thumb">
+                        <img src="img/project/6.jpg" alt="Project Thumb">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="project-box-layout5">
+                    <div class="item-img">
+                        <img src="img/project/7.jpg" alt="Project Thumb">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="project-box-layout5">
+                    <div class="item-img">
+                        <img src="img/project/8.jpg" alt="Project Thumb">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="project-box-layout5">
+                    <div class="item-img">
+                        <img src="img/project/9.jpg" alt="Project Thumb">
                     </div>
                 </div>
             </div>
