fixed link on decorative concrete

--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -70,9 +70,9 @@
         <div class="banner-img">
             <img src="{{ site.url }}/img/metallic-epoxy-floor-in-waiting-room.jpg" alt="Metallic Epoxy Flooring">
             <div class="item-content">
-                <div class="big-text">Available</div>
-                <div class="sub-text">for any type of Roof construction</div>
-                <a href="#" class="item-btn">Make An Appointment</a>
+                <div class="big-text">Free Estimates</div>
+                <div class="sub-text">For All Projects Inside Of Utah</div>
+                <a href="{{ site.url }}/contact" class="item-btn">Make An Appointment</a>
             </div>
         </div>
     </div>
