--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="https://eliteconcreteutah.com/img/favicon.png">
+    <link rel=”apple-touch-icon” href=”https://eliteconcreteutah.com/img/favicon.png”>
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://eliteconcreteutah.com/css/normalize.css">
     <!-- Main CSS -->
