--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -241,9 +241,11 @@ layout: default
                     <div class="about-box-content">
                         <h2 class="item-title">Concrete Doesn't Have To Be Ugly</h2>
                         <div class="item-subtitle">With More Than Half a Century of Experience And thousands of Innovative</div>
-                        <p>If your concrete is spalling, chipped, cracked, stained or just boring and bland? It doesn’t have to be that way. We have a solution to fit any space, style and budget.
-
-                            Our coatings are more durable, easier to maintain and way better looking than traditional concrete.</p>
+                        <p>
+                            If your concrete is spalling, chipped, cracked, stained or just boring and bland? 
+                            It doesn’t have to be that way. We have a solution to fit any space, style and budget.
+                            Our coatings are more durable, easier to maintain and way better looking than traditional concrete.
+                        </p>
                         <a href="#" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -261,11 +263,13 @@ layout: default
             <div class="col-lg-6 order-lg-1">
                 <div class="about-box-layout5">
                     <div class="about-box-content">
-                        <h2 class="item-title">We Strive To Be a Level Above The Competition Work</h2>
-                        <div class="item-subtitle">With More Than Half a Century of Experience And thousands of Innovative</div>
-                        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet they consec tetur, adipisci velit, 
-                            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatemo 
-                            qui quia dolor sit amedipisci develit.</p>
+                        <h2 class="item-title">Utah's Leading Concrete Contractor</h2>
+                        <div class="item-subtitle">Over 20 Years Of Experience</div>
+                        <p>
+                            From Salt Lake City to Moab and everywhere in between we have been providing concrete coating services since 1996.
+                            We regularly attend training seminars to make sure we are using the best products and techniques to give you the best
+                            results imaginable.
+                        </p>
                         <a href="#" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
