--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -270,7 +270,7 @@ layout: default
                             We regularly attend training seminars to make sure we are using the best products and techniques to give you the best
                             results imaginable.
                         </p>
-                        <a href="#" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
+                        <a href="{{ page.url }}/about" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@ layout: default
 <section class="service-wrap-layout1 bg-accent bg-common" data-bg-image="img/figure/banner-shape1.png">
     <div class="container">
         <div class="heading-layout1 heading-light">
-            <div class="item-subtitle">Behind The Story</div>
+            <div class="item-subtitle">We've Done It All</div>
             <h2>Our Working Process</h2>
         </div>
         <div class="row">
@@ -290,7 +290,6 @@ layout: default
                 <div class="service-box-layout1">
                     <div class="item-img">
                         <img src="img/residential-flooring-services.jpg" alt="residential flooring services">
-                        <div class="sl-number">01</div>
                     </div>
                     <div class="item-content">
                         <h3 class="item-title"><a href="{{ site.url }}/services">Residential</a></h3>
@@ -302,7 +301,6 @@ layout: default
                 <div class="service-box-layout1">
                     <div class="item-img">
                         <img src="img/commercial-flooring-services.jpg" alt="commercial flooring services">
-                        <div class="sl-number">02</div>
                     </div>
                     <div class="item-content">
                         <h3 class="item-title"><a href="{{ site.url }}/services">Commercial</a></h3>
@@ -314,7 +312,6 @@ layout: default
                 <div class="service-box-layout1">
                     <div class="item-img">
                         <img src="img/interior-flooring.jpg" alt="interior flooring">
-                        <div class="sl-number">03</div>
                     </div>
                     <div class="item-content">
                         <h3 class="item-title"><a href="{{ site.url }}/services">Interior & Exterior</a></h3>
@@ -330,7 +327,7 @@ layout: default
 <section class="project-wrap-layout1 bg-common" data-bg-image="img/project/project-bg.jpg">
     <div class="container">
         <div class="heading-layout1">
-            <div class="item-subtitle">Working Projects</div>
+            <div class="item-subtitle">See Our Work</div>
             <h2>Our Latest Projects</h2>
         </div>
         <div class="row gutters-15">
@@ -403,15 +400,16 @@ layout: default
     <div class="about-box-layout1">
         <div class="about-box-content">
             <div class="item-header">
-                <div class="experience-year">25</div>
+                <div class="experience-year">Over 20</div>
                 <ul class="item-title">
                     <li>Years Of</li>
-                    <li>Working <span>Experience</span></li>
+                    <li>Concrete <span>Experience</span></li>
                 </ul>
             </div>
-            <p>Rake a type specimen book. It has survived not only five 
-                centuries, but also the leap into electronic typesetting
-                emaining essentially unchanged.</p>
+            <p>
+                We have worked on small closets and 80,000 square feet warehouses. No matter your situation, style or budget we have something to fit your needs.
+                
+            </p>
             <a href="{{ site.url }}/about" class="btn-fill-xl bg-textprimary text-primarytext">ABOUT US<i class="fas fa-angle-right"></i></a>
         </div>
     </div>
