--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -246,7 +246,7 @@ layout: default
                             It doesn’t have to be that way. We have a solution to fit any space, style and budget.
                             Our coatings are more durable, easier to maintain and way better looking than traditional concrete.
                         </p>
-                        <a href="#" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
+                        <a href="{{ site.url }}/services" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -270,7 +270,7 @@ layout: default
                             We regularly attend training seminars to make sure we are using the best products and techniques to give you the best
                             results imaginable.
                         </p>
-                        <a href="{{ page.url }}/about" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
+                        <a href="{{ site.url }}/about" class="ghost-btn-xl primary-border text-Primary mg-t-15">LEARN MORE<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -408,7 +408,7 @@ layout: default
             </div>
             <p>
                 We have worked on small closets and 80,000 square feet warehouses. No matter your situation, style or budget we have something to fit your needs.
-                
+
             </p>
             <a href="{{ site.url }}/about" class="btn-fill-xl bg-textprimary text-primarytext">ABOUT US<i class="fas fa-angle-right"></i></a>
         </div>
