--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -400,7 +400,7 @@ layout: default
     <div class="about-box-layout1">
         <div class="about-box-content">
             <div class="item-header">
-                <div class="experience-year">Over 20</div>
+                <div class="experience-year">20</div>
                 <ul class="item-title">
                     <li>Years Of</li>
                     <li>Concrete <span>Experience</span></li>
