--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -416,66 +416,8 @@ layout: default
 </section>
 <!-- About Us Area End Here -->
 <!-- Progress Area Start Here -->
-<section class="progress-wrap-layout1 bg-common" data-bg-image="img/figure/banner-shape1.png">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="progress-box-layout1">
-                    <div class="progress-content">
-                        <div class="item-icon">
-                            <i class="flaticon-apartment"></i>
-                        </div>
-                        <div class="item-content">
-                            <div class="counter count-number" data-num="1050">1050</div>
-                            <div class="count-title">Residential Projects Done</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="progress-box-layout1">
-                    <div class="progress-content">
-                        <div class="item-icon">
-                            <i class="flaticon-industry"></i>
-                        </div>
-                        <div class="item-content">
-                            <div class="counter count-number" data-num="1250">1250</div>
-                            <div class="count-title">Commertial Projects</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="progress-box-layout1">
-                    <div class="progress-content">
-                        <div class="item-icon">
-                            <i class="flaticon-helmet"></i>
-                        </div>
-                        <div class="item-content">
-                            <div class="counter count-number" data-num="650">650</div>
-                            <div class="count-title">Hard Working People</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="progress-box-layout1">
-                    <div class="progress-content">
-                        <div class="item-icon">
-                            <i class="flaticon-happy"></i>
-                        </div>
-                        <div class="item-content">
-                            <div class="counter count-number" data-num="3659">3659</div>
-                            <div class="count-title">Our Satisfied Clients</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- Progress Area End Here -->
-<!-- Blog Area Start Here -->
+<!-- Blog Area Start Here 
 <section class="blog-wrap-layout1">
     <div class="container">
         <div class="heading-layout1">
@@ -523,5 +465,5 @@ layout: default
             </div>
         </div>
     </div>
-</section>
+</section>-->
 <!-- Blog Area End Here -->
