--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -29,37 +29,9 @@ layout: default
                     <div class="contact-form">
                         <div class="heading-layout3">
                             <h3 class="mg-b-10">Request A Free Estimate</h3>
-                            <p>when an unknown printer took a galley of  type and scrambled it to make.</p>
+                            <p>We take on all kinds of projects. Big airplan hangars and small basement floors. We've got a solution for you!</p>
                         </div>
-                        <form class="contact-form-box" id="contact-form">
-                            <div class="row gutters-15">
-                                <div class="col-md-6 col-12 form-group">
-                                    <input type="text" placeholder="Name *" class="form-control" name="name" data-error="Name field is required" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="col-md-6 col-12 form-group">
-                                    <input type="email" placeholder="E-mail *" class="form-control" name="email" data-error="email field is required" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="col-md-6 col-12 form-group">
-                                    <input type="text" placeholder="Phone *" class="form-control" name="phone" data-error="Phone field is required" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="col-md-6 col-12 form-group">
-                                    <input type="text" placeholder="Subject *" class="form-control" name="subject" data-error="Subject field is required" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="col-12 form-group">
-                                    <textarea placeholder="Comments *" class="textarea form-control" name="message" id="form-message" rows="7" cols="20" 
-                                    data-error="Message field is required" required></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="col-12 form-group">
-                                    <button type="submit" class="btn-fill-xl bg-Primary text-textprimary border-none">Send Now</button>
-                                </div>
-                            </div>
-                            <div class="form-response"></div>
-                        </form>
+                        {% include form.html %}
                     </div>
                 </div>
             </div>
