--- a/_includes/form.html
+++ b/_includes/form.html
@@ -35,6 +35,10 @@
             <div class="help-block with-errors"></div>
         </div>
         <div class="col-12 form-group">
+            <textarea name="about" placeholder="Tell us about your project..." class="form-control" data-error="About field is required" cols="30" rows="10" required></textarea>
+            <div class="help-block with-errors"></div>
+        </div>
+        <div class="col-12 form-group">
             <button type="submit" class="fw-btn-fill mg-t-10 bg-Primary text-textprimary">SEND<i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
