changes service front matter

--- a/_layouts/single-service.html
+++ b/_layouts/single-service.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Inne Page Banner Area Start Here -->
-<section class="inner-page-banner bg-common" data-bg-image="{{ page.bg-image}}">  
+<section class="inner-page-banner bg-common" data-bg-image="https://eliteconcreteutah.com/img/h1.png">  
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -16,7 +16,7 @@ layout: default
                         <li>
                             <a href="{{ site.url }}/services">Services</a>
                         </li>
-                        <li>{{ page.servicename }}</li>
+                        <li>{{ page.title }}</li>
                     </ul>
                 </div>
             </div>
