--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -242,79 +242,7 @@ layout: default
                         </ul>
                     </div>
                 </div>
-                <div class="widget widget-post">
-                    <div class="heading-layout3">
-                        <h3>Popular Posts</h3>
-                    </div>
-                    <div class="media">
-                        <div class="item-img">
-                            <a href="#">
-                                <img src="img/blog/blog8.jpg" alt="News">
-                            </a>
-                        </div>
-                        <div class="media-body space-sm">
-                            <h5 class="post-title">
-                                <a href="#">We won best factory  award of the ...</a>
-                            </h5>
-                            <div class="post-date">Jan 24, 2019</div>
-                        </div>
-                    </div>
-                    <div class="media">
-                        <div class="item-img">
-                            <a href="#">
-                                <img src="img/blog/blog9.jpg" alt="News">
-                            </a>
-                        </div>
-                        <div class="media-body space-sm">
-                            <h5 class="post-title">
-                                <a href="#">We won best factory  award of the ...</a>
-                            </h5>
-                            <div class="post-date">Jan 24, 2019</div>
-                        </div>
-                    </div>
-                    <div class="media">
-                        <div class="item-img">
-                            <a href="#">
-                                <img src="img/blog/blog10.jpg" alt="News">
-                            </a>
-                        </div>
-                        <div class="media-body space-sm">
-                            <h5 class="post-title">
-                                <a href="#">We won best factory  award of the ...</a>
-                            </h5>
-                            <div class="post-date">Jan 24, 2019</div>
-                        </div>
-                    </div>
-                    <div class="media">
-                        <div class="item-img">
-                            <a href="#">
-                                <img src="img/blog/blog11.jpg" alt="News">
-                            </a>
-                        </div>
-                        <div class="media-body space-sm">
-                            <h5 class="post-title">
-                                <a href="#">We won best factory  award of the ...</a>
-                            </h5>
-                            <div class="post-date">Jan 24, 2019</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="widget widget-tag">
-                    <div class="heading-layout3">
-                        <h3>Tags</h3>
-                    </div>
-                    <ul class="tag-list">
-                        <li><a href="#">Roofing</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Repair</a></li>
-                        <li><a href="#">Architecture</a></li>
-                        <li><a href="#">Construction</a></li>
-                        <li><a href="#">Roofing</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Repair</a></li>
-                    </ul>
-                </div>
-            </div>
+                {% include service/sidebar.html %}
         </div>
     </div>
 </section>
